<resources>
    <string name="app_name">风骑小说</string>
    <string name="nb_title_app">风骑</string>

    <!--string_array-->
    <string-array name="nb_fragment_title">
        <item>@string/nb_fragment_title_bookshelf</item>
        <item>@string/nb_fragment_title_community</item>
        <item>@string/nb_fragment_title_find</item>
    </string-array>

    <string-array name="nb_fragment_section">
        <item>@string/nb_fragment_community_comment</item>
        <item>@string/nb_fragment_community_discussion</item>
        <item>@string/nb_fragment_community_help</item>
        <item>@string/nb_fragment_community_girl</item>
        <item>@string/nb_fragment_community_compose</item>
    </string-array>

    <!--榜单分类-->
    <string-array name="nb_fragment_bill_book">
        <item>周榜</item>
        <item>月榜</item>
        <item>总榜</item>
    </string-array>

    <!--CollBook的长按点击-->
    <string-array name="nb_menu_net_book">
        <item>@string/nb_menu_action_top</item>
        <item>@string/nb_menu_action_cache</item>
        <item>@string/nb_menu_action_delete</item>
        <item>@string/nb_menu_action_batch_manage</item>
    </string-array>

    <string-array name="nb_menu_local_book">
        <item>@string/nb_menu_action_top</item>
        <item>@string/nb_menu_action_delete</item>
        <item>@string/nb_menu_action_batch_manage</item>
    </string-array>

    <!--常用-->
    <string name="nb_common_tip">提示</string>
    <string name="nb_common_sure">确定</string>
    <string name="nb_common_cancel">取消</string>

    <!--网络相关-->

    <string name="nb_net.error_tip">似乎没有网络哦</string>

    <!--fragment_title:主页的名字-->
    <string name="nb_fragment_title_bookshelf">书架</string>
    <string name="nb_fragment_title_community">书城</string>
    <string name="nb_fragment_title_find">发现</string>

    <!--fragment-->
    <string name="nb_fragment_community_comment">综合讨论区</string>
    <string name="nb_fragment_community_discussion">书评区</string>
    <string name="nb_fragment_community_help">书荒帮助区</string>
    <string name="nb_fragment_community_girl">女生区</string>
    <string name="nb_fragment_community_compose">原创区</string>

    <!--fragment 主题书单-->
    <string name="nb_fragment_book_list_hot">本周最热</string>
    <string name="nb_fragment_book_list_newest">最新发布</string>
    <string name="nb_fragment_book_list_collect">最多收藏</string>

    <string name="nb_fragment_book_list_message">共%1$d本书 |&#160; %2$d人收藏</string>

    <!--评论相关-->
    <string name="nb_comment_floor">%1$d楼&#160;</string>
    <string name="nb_comment_like_count">❤%1$d次同感</string>
    <string name="nb_comment_best_comment">仰望神评论</string>
    <string name="nb_comment_comment_count">共%1$d条评论</string>
    <string name="nb_comment_reply_floor">(%1$d楼)</string>
    <string name="nb_comment_reply_nickname">回复 %1$s</string>
    <string name="nb_comment_empty_comment">暂无评论</string>

    <!--书评区相关-->
    <string name="nb_review_book_type">[%1$s]</string>
    <string name="nb_review_recommend">%1$d 人推荐</string>
    <string name="nb_review_helpful">有用</string>
    <string name="nb_review_unhelpful">无用</string>
    <string name="nb_review_book_score">给书评打分</string>
    <string name="nb_review_master_score">楼主打分：</string>


    <!--find-->
    <string name="nb_fragment_find_top">排行榜</string>
    <string name="nb_fragment_find_topic">主题书单</string>
    <string name="nb_fragment_find_sort">分类</string>
    <string name="nb_fragment_find_listen">有声小说</string>

    <!--bookcity-->
    <string name="nb_fragment_city_qidian">起点中文网</string>
    <string name="nb_fragment_city_qidian_url">https://www.qidian.com/</string>
    <string name="nb_fragment_city_seventeenk">17K小说网</string>
    <string name="nb_fragment_city_seventeenk_url">http://www.17k.com/</string>
    <string name="nb_fragment_city_zongheng">纵横中文网</string>
    <string name="nb_fragment_city_zongheng_url">http://www.zongheng.com/</string>
    <string name="nb_fragment_city_xiaoxiang">潇湘书院</string>
    <string name="nb_fragment_city_xiaoxiang_url">http://www.xxsy.net/</string>
    <string name="nb_fragment_city_redsweet">红袖添香</string>
    <string name="nb_fragment_city_redsweet_url">https://www.hongxiu.com/</string>
    <string name="nb_fragment_city_readnovel">小说阅读网</string>
    <string name="nb_fragment_city_readnovel_url">https://www.readnovel.com/</string>
    <string name="nb_fragment_city_chuangshi">创世中文网</string>
    <string name="nb_fragment_city_chuangshi_url">http://chuangshi.qq.com/</string>
    <string name="nb_fragment_city_wangyi">网易云阅读</string>
    <string name="nb_fragment_city_wangyi_url">http://yuedu.163.com/index</string>
    <string name="nb_fragment_city_uu">UU小说网</string>
    <string name="nb_fragment_city_uu_url">http://www.uu234.net/</string>



    <!--dialog-->
    <string name="nb_dialog_text_introduce">我们会根据您的喜好\n推荐相对应的小说</string>
    <string name="nb_dialog_text_choose_tip">--请选择你的喜好--</string>
    <string name="nb_dialog_text_boy_story">男生小说</string>
    <string name="nb_dialog_text_girl_story">女生小说</string>

    <!--menu-->
    <string name="nb_menu_action_search">网络搜索</string>
    <string name="nb_menu_action_login">请登录</string>
    <string name="nb_menu_action_message">我的消息</string>
    <string name="nb_menu_action_download">下载列表</string>
    <string name="nb_menu_action_sync">同步书架</string>
    <string name="nb_menu_action_scan">扫描本地书籍</string>
    <string name="nb_menu_action_transfer">WIFI传书</string>
    <string name="nb_menu_action_feedback">意见反馈</string>
    <string name="nb_menu_action_share">分享</string>
    <string name="nb_menu_action_night_mode">夜间模式</string>
    <string name="nb_menu_action_setting">设置</string>

    <string name="nb_menu_action_top">置顶</string>
    <string name="nb_menu_action_cache">缓存</string>
    <string name="nb_menu_action_delete">删除</string>
    <string name="nb_menu_action_batch_manage">批量管理</string>

    <!--SplashActivity-->
    <string name="nb_splash_skip">跳过 %d S</string>

    <!--user:用户的信息-->
    <string name="nb_user_lv">&#160;lv.%1$d</string>
    <!--book:书籍的信息-->
    <string name="nb_book_type">[%1$s]</string>
    <string name="nb_book_recommend">%1$d 人推荐</string>
    <string name="nb_book_message">%1$d人在追 |&#160; %2$s%%读者留存</string>
    <string name="nb_book_word">|&#160;%1$d&#160;万字</string>
    <!--sort:每类的书-->
    <string name="nb_sort_book_count">%1$d 本</string>

    <!--tag: 标签-->
    <string name="nb_tag_all">全部</string>
    <string name="nb_tag_sex">性别</string>
    <string name="nb_tag_boy">男生</string>
    <string name="nb_tag_girl">女生</string>


    <!--book_detail : -->
    <string name="nb_book_detail_hot_comment">热门书评</string>
    <string name="nb_book_detail_community">%1$s的社区</string>
    <string name="nb_book_detail_posts_count">共有%1$d个帖子</string>
    <string name="nb_book_detail_recommend_book_list">推荐书单</string>
    <string name="nb_book_detail_chase_update">追更</string>
    <string name="nb_book_detail_give_up">放弃</string>
    <string name="nb_book_detail_start_read">开始阅读</string>

    <!--DownloadTask:书籍下载-->
    <string name="nb_download_add_succeed">成功添加到下载列表</string>
    <string name="nb_download_exist">该任务已存在</string>
    <string name="nb_download_load_all">已缓存全部章节</string>
    <string name="nb_download_progress">%1$d/%2$d</string>
    <string name="nb_download_chapter_scope">(%1$d-%2$d章)</string>

    <string name="nb_download_start">继续</string>
    <string name="nb_download_pause">暂停</string>
    <string name="nb_download_wait">等待</string>
    <string name="nb_download_error">错误</string>
    <string name="nb_download_finish">完成</string>

    <string name="nb_download_loading">下载中</string>
    <string name="nb_download_waiting">等待中</string>
    <string name="nb_download_pausing">暂停中</string>
    <string name="nb_download_complete">已完成</string>
    <string name="nb_download_source_error">资源或网络错误</string>

    <!--mode-->
    <string name="nb_mode_night">夜间</string>
    <string name="nb_mode_morning">日间</string>

    <!--read-->
    <string name="nb_read_voice">有声读书</string>
    <string name="nb_read_brief">简介</string>
    <string name="nb_read_setting">设置</string>
    <string name="nb_read_download">缓存</string>'
    <string name="nb_read_category">目录</string>
    <string name="nb_read_no_chapter">第 %1$d 章(%2$d)</string>

    <!--file system-->
    <string name="nb_file_sub_count">%1$d 项</string>
    <string name="nb_file_path">存储卡:%1$s</string>
    <string name="nb_file_add_shelf">加入书架</string>
    <string name="nb_file_add_shelves">加入书架(%1$d)</string>
    <string name="nb_file_add_succeed">成功添加%1$d本书</string>

    <!--search-->
    <string name="nb_search_book_brief">%1$d人在追 | %2$s读者留存 | %3$s著</string>

    <string name="open">打开侧滑栏</string>
    <string name="close">关闭侧滑栏</string>


</resources>
